# TrackFlowRelease

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  DEV.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.js
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.css  App.jsx  ErrorBoundary.jsx  main.jsx  scanner.js  storage.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  storage
src/components/: AuthScreen.jsx  CheckoutModal.jsx  Column.jsx  ConfirmModal.jsx  ContactModal.jsx  ContextMenu.jsx  DetailPanel.jsx  Icon.jsx  KeyboardShortcuts.jsx  MiniPlayer.jsx  NamePromptModal.jsx  ProfileModal.jsx  ProjectSidebar.jsx  PurchaseGate.jsx  SettingsPanel.jsx  ShareModal.jsx  SortFilterDropdown.jsx  Tag.jsx  TagManager.jsx  ThemeCustomizer.jsx  TrialWelcomeModal.jsx  TutorialModal.jsx  UpgradeModal.jsx
src/hooks/: useAuth.js  useCollabBoard.js  useFlip.js  useTier.js  useUpdater.js
src/lib/: constants.js  dawParser.js  discord.js  errorReporting.js  migrate.js  stripe.js  supabase.js  theme.js
supabase/migrations/: 001_initial_schema.sql  002_shared_boards.sql  003_stripe.sql  004_display_name.sql  005_avatar_color.sql  006_rename_tiers.sql  007_collab_presence.sql  008_fix_tier_constraint.sql  009_fix_board_members_rls.sql  010_fix_shared_boards_mode.sql  011_add_board_member_rpc.sql  012_update_member_role_rpc.sql  013_realtime_and_lock.sql  014_fix_rls.sql  015_get_board_members_rpc.sql  016_avatar_upload.sql  (+11 more)
(+6 files in other folders)
